--- a/sprint-one/styles/main.css
+++ b/sprint-one/styles/main.css
@@ -55,7 +55,7 @@ a {
   display: flex;
   flex-direction: column;
   text-align: center;
-  height: 80px;
+  height: 5rem;
   background-color: #323232;
 }
 @media (min-width: 768px) {
@@ -66,46 +66,48 @@ a {
   }
 }
 .navbar__items {
-  width: 160px;
-  list-style: none;
-  margin: 16px 0 0 0;
-  padding-bottom: 5px;
+  width: 10rem;
+  padding-bottom: 0.313rem;
+  margin: 1rem 0 0 0;
 }
 @media (min-width: 768px) {
   .navbar__items {
+    width: auto;
     min-width: auto;
-    margin: 0 48px 0 40px;
+    margin: 0 3rem 0 2.5rem;
+    padding: 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .navbar__items {
-    margin: 0 56px;
+    margin: 0 3.5rem;
   }
 }
 .navbar__items--logo {
-  margin-left: 16px;
-  margin-top: 16px;
-  height: 15px;
+  margin-left: 1rem;
+  height: 0.938rem;
+  margin-top: 1rem;
 }
 @media (min-width: 768px) {
   .navbar__items--logo {
-    margin-left: 24px;
+    margin-left: 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .navbar__items--logo {
-    margin-left: 180px;
+    margin-left: 11.25rem;
   }
 }
 @media (min-width: 768px) {
   .navbar__items--logo {
-    margin-top: 24px;
+    margin-top: 1.5rem;
   }
 }
 .navbar__items--bar {
-  border-bottom: 5px solid white;
+  border-bottom: 0.313px solid white;
 }
 .navbar__items a {
+  display: inline-block;
   font-size: 0.875rem;
   line-height: 1.375rem;
   color: white;
@@ -115,6 +117,12 @@ a {
     font-size: 1rem;
     line-height: 1.5rem;
   }
+}
+.navbar__items a:hover {
+  text-shadow: 0px 1px 3px rgba(253, 201, 31, 0.5);
+  transform: scale(2);
+  transition: 0.2s;
+  font-weight: bold;
 }
 .navbar__links-cont {
   display: flex;
@@ -133,24 +141,24 @@ a {
   background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/hero.jpg);
   background-size: cover;
   width: 100%;
-  min-height: 183px;
+  min-height: 11.438rem;
   height: 40vw;
 }
 @media (min-width: 768px) {
   .hero {
-    min-height: 400px;
+    min-height: 25rem;
   }
 }
 @media (min-width: 1440px) {
   .hero {
-    min-height: 670px;
+    min-height: 41.875rem;
   }
 }
 .hero__title {
   font-size: 1.5rem;
   line-height: 2rem;
+  margin: 0 1rem;
   color: white;
-  margin: 0 16px;
 }
 @media (min-width: 768px) {
   .hero__title {
@@ -160,26 +168,26 @@ a {
 }
 @media (min-width: 768px) {
   .hero__title {
-    margin: 0 24px;
+    margin: 0 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .hero__title {
-    margin: 0 180px;
+    margin: 0 11.25rem;
   }
 }
 
 .about-container {
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 @media (min-width: 768px) {
   .about-container {
-    margin: 0 24px;
+    margin: 0 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .about-container {
-    margin: 0 180px;
+    margin: 0 11.25rem;
   }
 }
 
@@ -191,7 +199,7 @@ a {
 .about__title {
   font-size: 1.5rem;
   line-height: 2rem;
-  margin: 32px 0 24px 0;
+  margin: 2rem 0 1.5rem 0;
 }
 @media (min-width: 768px) {
   .about__title {
@@ -201,27 +209,27 @@ a {
 }
 @media (min-width: 1440px) {
   .about__title {
-    margin: 48px 0;
+    margin: 3rem 0;
   }
 }
 .about__figure {
+  min-height: 9.063rem;
   width: 100%;
-  min-height: 145px;
   height: 30vw;
-  margin: 0 0 24px 0;
+  margin: 0 0 1.5rem 0;
 }
 @media (min-width: 768px) {
   .about__figure {
-    min-width: 720px;
-    min-height: 362px;
+    min-width: 45rem;
+    min-height: 22.625rem;
   }
 }
 @media (min-width: 1440px) {
   .about__figure {
-    min-width: 896px;
-    min-height: 450px;
-    padding: 0 100px;
-    margin: 0 0 48px 0;
+    min-width: 56rem;
+    min-height: 28.125rem;
+    padding: 0 6.25rem;
+    margin: 0 0 3rem 0;
   }
 }
 .about__figure--img {
@@ -233,7 +241,7 @@ a {
   line-height: 1.375rem;
   width: 95%;
   font-weight: 700;
-  margin: 0 0 32px 0;
+  margin: 0 0 2rem 0;
 }
 @media (min-width: 768px) {
   .about__quote {
@@ -249,14 +257,14 @@ a {
 }
 @media (min-width: 1440px) {
   .about__quote {
-    margin: 0 100px 40px 100px;
     width: 75%;
+    margin: 0 6.25rem 2.5rem 6.25rem;
   }
 }
 .about__quote--author {
   font-size: 0.875rem;
   line-height: 1.375rem;
-  margin: 0 0 40px 0;
+  margin: 0 0 2.5rem 0;
 }
 @media (min-width: 768px) {
   .about__quote--author {
@@ -266,7 +274,7 @@ a {
 }
 @media (min-width: 1440px) {
   .about__quote--author {
-    margin: 0 100px 56px 100px;
+    margin: 0 6.25rem 3.5rem 6.25rem;
   }
 }
 
@@ -274,7 +282,7 @@ a {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
 }
 @media (min-width: 768px) {
   .about-band {
@@ -284,13 +292,13 @@ a {
 }
 @media (min-width: 1440px) {
   .about-band {
-    margin-bottom: 48px;
+    margin-bottom: 3rem;
   }
 }
 .about-band__title {
   font-size: 0.875rem;
   line-height: 1.375rem;
-  margin: 0 0 24px 0;
+  margin: 0 0 1.5rem 0;
 }
 @media (min-width: 768px) {
   .about-band__title {
@@ -306,13 +314,13 @@ a {
 }
 @media (min-width: 1440px) {
   .about-band__title {
-    margin: 0 100px 32px 100px;
+    margin: 0 6.25rem 2rem 6.25rem;
   }
 }
 .about-band__text {
   font-size: 0.813rem;
   line-height: 1.125rem;
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
 }
 @media (min-width: 768px) {
   .about-band__text {
@@ -328,38 +336,38 @@ a {
 }
 @media (min-width: 1440px) {
   .about-band__text {
-    margin: 0 100px 0 100px;
+    margin: 0 6.25rem 0 6.25rem;
   }
 }
 .about-band__text--between {
-  margin: 0 0 16px 0;
+  margin: 0 0 1rem 0;
 }
 @media (min-width: 768px) {
   .about-band__text--between {
-    margin: 0 24px 0 0;
+    margin: 0 1.5rem 0 0;
   }
 }
 @media (min-width: 1440px) {
   .about-band__text--between {
-    margin-right: 40px;
+    margin-right: 2.5rem;
   }
 }
 
 .gallery-container {
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 @media (min-width: 768px) {
   .gallery-container {
-    margin: 0 24px;
+    margin: 0 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .gallery-container {
-    margin: 0 180px;
+    margin: 0 11.25rem;
   }
 }
 .gallery-container__title {
-  margin: 32px 0 24px 0;
+  margin: 2rem 0 1.5rem 0;
   font-size: 1.5rem;
   line-height: 2rem;
 }
@@ -371,7 +379,7 @@ a {
 }
 @media (min-width: 1440px) {
   .gallery-container__title {
-    margin: 48px 0 64px 0;
+    margin: 3rem 0 4rem 0;
   }
 }
 
@@ -389,25 +397,28 @@ a {
 }
 .gallery__figure {
   width: 100%;
-  height: 162;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
+  filter: grayscale(0.6);
+}
+.gallery__figure:hover {
+  filter: grayscale(0);
 }
 @media (min-width: 768px) {
   .gallery__figure {
     width: 31%;
-    margin-bottom: 24px;
-    min-width: 224px;
+    margin-bottom: 1.5rem;
+    min-width: 14rem;
   }
 }
 @media (min-width: 1440px) {
   .gallery__figure {
     width: 31%;
-    min-width: 344px;
+    min-width: 21.5rem;
   }
 }
 @media (min-width: 768px) {
   .gallery__figure--margin-mid {
-    margin: 0 24px;
+    margin: 0 1.5rem;
   }
 }
 .gallery__figure--img {
@@ -415,23 +426,23 @@ a {
 }
 
 .footer-container {
-  margin-top: 16px;
+  margin-top: 1rem;
   background-color: #323232;
 }
 
 .footer {
-  margin: 0 16px;
+  margin: 0 1rem;
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 768px) {
   .footer {
-    margin: 0 24px;
+    margin: 0 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .footer {
-    margin: 0 180px;
+    margin: 0 11.25rem;
   }
 }
 @media (min-width: 768px) {
@@ -442,41 +453,33 @@ a {
   }
 }
 .footer__title {
-  font-size: 1.5rem;
-  line-height: 2rem;
   font-size: 2rem;
   font-weight: 700;
   color: white;
-  margin: 40px 0 24px 0;
-}
-@media (min-width: 768px) {
-  .footer__title {
-    font-size: 2.25rem;
-    line-height: 2.75rem;
-  }
+  margin: 2.5rem 0 1.5rem 0;
 }
 @media (min-width: 1440px) {
   .footer__title {
-    margin: 48px 0 56px 0;
+    margin: 3rem 0 3.5rem 0;
   }
 }
 .footer__list {
   display: flex;
   flex-direction: row;
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
   flex: 1;
 }
 @media (min-width: 768px) {
   .footer__list {
-    margin-left: 44px;
+    margin-left: 2.75rem;
   }
 }
 .footer__items {
-  margin: 0px 16px;
+  margin: 0px 1rem;
 }
 @media (min-width: 1440px) {
   .footer__items {
-    margin: 0 32px 0 32px 0;
+    margin: 0 2rem 0 2rem 0;
   }
 }
 .footer__items--hide {
@@ -490,23 +493,23 @@ a {
 }
 @media (min-width: 1440px) {
   .footer__items--hide {
-    width: 120px;
+    width: 7.5rem;
   }
 }
 
 .footer-info {
   display: flex;
   flex-direction: column;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 @media (min-width: 768px) {
   .footer-info {
-    margin: 0 24px;
+    margin: 0 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .footer-info {
-    margin: 0 180px;
+    margin: 0 11.25rem;
   }
 }
 @media (min-width: 768px) {
@@ -529,11 +532,16 @@ a {
 }
 @media (min-width: 768px) {
   .footer-info .footer-members__margin-mid {
-    margin: 0 24px;
+    margin: 0 2rem;
+  }
+}
+@media (min-width: 1440px) {
+  .footer-info .footer-members__margin-mid {
+    margin-right: 3.875rem;
   }
 }
 .footer-info .footer-members__address {
-  margin: 24px 0;
+  margin: 1.5rem 0;
   color: white;
   font-size: 0.813rem;
   line-height: 1.125rem;
@@ -544,14 +552,17 @@ a {
     line-height: 1.375rem;
   }
 }
+.footer-info a {
+  color: white;
+}
 
 .footer-copyright {
   font-size: 0.813rem;
   line-height: 1.125rem;
-  width: 215px;
-  color: white;
-  margin-bottom: 40px;
   flex-basis: 100%;
+  color: white;
+  width: 13.438rem;
+  margin-bottom: 2.5rem;
 }
 @media (min-width: 768px) {
   .footer-copyright {
@@ -561,6 +572,6 @@ a {
 }
 @media (min-width: 1440px) {
   .footer-copyright {
-    margin-top: 40px;
+    margin-top: 2.5rem;
   }
 }/*# sourceMappingURL=main.css.map */
