--- a/sprint-one/styles/main.css
+++ b/sprint-one/styles/main.css
@@ -552,11 +552,16 @@ a {
     line-height: 1.375rem;
   }
 }
-.footer-info a {
+.footer-info .footer-members__address--email:hover {
+  text-shadow: 0px 1px 3px rgba(253, 201, 31, 0.5);
+  transform: scale(2);
+  transition: 0.1s;
+  font-weight: bold;
+}
+.footer-info .footer-members a {
   color: white;
 }
-
-.footer-copyright {
+.footer-info .footer-copyright {
   font-size: 0.813rem;
   line-height: 1.125rem;
   flex-basis: 100%;
@@ -565,13 +570,13 @@ a {
   margin-bottom: 2.5rem;
 }
 @media (min-width: 768px) {
-  .footer-copyright {
+  .footer-info .footer-copyright {
     font-size: 0.875rem;
     line-height: 1.375rem;
   }
 }
 @media (min-width: 1440px) {
-  .footer-copyright {
+  .footer-info .footer-copyright {
     margin-top: 2.5rem;
   }
 }/*# sourceMappingURL=main.css.map */
