--- a/sprint-one/styles/main.scss
+++ b/sprint-one/styles/main.scss
@@ -310,19 +310,26 @@ a {
       margin: 1.5rem 0;
       color: white;
       @include h4-paragraph;
+
+      &--email:hover {
+        text-shadow: 0px 1px 3px rgba(253, 201, 31, 0.5);
+        transform: scale(2);
+        transition: 0.1s;
+        font-weight: bold;
+      }
+    }
+    a {
+      color: white;
     }
   }
-  a {
+  .footer-copyright {
+    @include h4-paragraph;
+    flex-basis: 100%;
     color: white;
-  }
-}
-.footer-copyright {
-  @include h4-paragraph;
-  flex-basis: 100%;
-  color: white;
-  width: 13.438rem;
-  margin-bottom: 2.5rem;
-  @include desktop {
-    margin-top: 2.5rem;
+    width: 13.438rem;
+    margin-bottom: 2.5rem;
+    @include desktop {
+      margin-top: 2.5rem;
+    }
   }
 }
