--- a/sprint-one/styles/main.scss
+++ b/sprint-one/styles/main.scss
@@ -31,7 +31,7 @@ a {
   }
 
   &__items {
-    width: 10rem;
+    width: 50%;
     padding-bottom: 0.313rem;
     margin: 1rem 0 0 0;
     @include tablet {
