Update JS to fulfill assigment requisites
[Ticket: X]

--- a/sprint-two/styles/main.css
+++ b/sprint-two/styles/main.css
@@ -429,7 +429,7 @@ a {
   display: flex;
   flex-direction: column;
 }
-.conversation-container .conversation__form {
+.conversation-container .conversation-form {
   display: flex;
   flex-direction: column;
 }
