--- a/sprint-two/styles/main.css
+++ b/sprint-two/styles/main.css
@@ -426,13 +426,324 @@ a {
 }
 
 .conversation-container {
+  margin: 0 1rem;
   display: flex;
   flex-direction: column;
 }
-.conversation-container .conversation-form {
+@media (min-width: 768px) {
+  .conversation-container {
+    margin: 0 1.5rem;
+  }
+}
+@media (min-width: 1440px) {
+  .conversation-container {
+    margin: 0 11.25rem;
+  }
+}
+.conversation-container__title {
+  margin-top: 32px;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+@media (min-width: 768px) {
+  .conversation-container__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+  }
+}
+@media (min-width: 1440px) {
+  .conversation-container__title {
+    margin-top: 48px;
+  }
+}
+
+.conversation-form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: auto;
+}
+.conversation-form__divider--top {
+  display: none;
+}
+@media (min-width: 768px) {
+  .conversation-form__divider--top {
+    display: block;
+    width: 524px;
+    margin: 0 auto 0 auto;
+    border-top: 1px solid #e1e1e1;
+  }
+}
+.conversation-form__picture {
+  display: flex;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 16px;
+  margin-top: 40px;
+}
+@media (min-width: 1440px) {
+  .conversation-form__picture {
+    margin-top: 58px;
+  }
+}
+.conversation-form__picture--img {
+  width: 100%;
+  height: auto;
+}
+.conversation-form__form-container {
   display: flex;
   flex-direction: column;
+  width: 224px;
 }
+@media (min-width: 768px) {
+  .conversation-form__form-container {
+    width: 460px;
+  }
+}
+.conversation-form__name-label {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  color: #afafaf;
+  font-weight: 600;
+  margin-top: 40px;
+  margin-bottom: 8px;
+}
+@media (min-width: 768px) {
+  .conversation-form__name-label {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+}
+@media (min-width: 1440px) {
+  .conversation-form__name-label {
+    margin-top: 58px;
+  }
+}
+.conversation-form__name {
+  height: 48px;
+  background-color: #fafafa;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+.conversation-form__name::-moz-placeholder {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  padding-left: 15px;
+}
+.conversation-form__name:-ms-input-placeholder {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  padding-left: 15px;
+}
+.conversation-form__name::placeholder {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  padding-left: 15px;
+}
+@media (min-width: 768px) {
+  .conversation-form__name::-moz-placeholder {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+  .conversation-form__name:-ms-input-placeholder {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+  .conversation-form__name::placeholder {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+}
+.conversation-form__label-textarea {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  color: #afafaf;
+  font-weight: 600;
+  margin-top: 16px;
+  margin-bottom: 8px;
+}
+@media (min-width: 768px) {
+  .conversation-form__label-textarea {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+}
+@media (min-width: 1440px) {
+  .conversation-form__label-textarea {
+    margin-top: 24px;
+  }
+}
+.conversation-form__textarea {
+  height: 96px;
+  background-color: #fafafa;
+  border-radius: 5px;
+}
+.conversation-form__textarea::-moz-placeholder {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  padding-top: 15px;
+  padding-left: 15px;
+}
+.conversation-form__textarea:-ms-input-placeholder {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  padding-top: 15px;
+  padding-left: 15px;
+}
+.conversation-form__textarea::placeholder {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  padding-top: 15px;
+  padding-left: 15px;
+}
+@media (min-width: 768px) {
+  .conversation-form__textarea::-moz-placeholder {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+  .conversation-form__textarea:-ms-input-placeholder {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+  .conversation-form__textarea::placeholder {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+}
+.conversation-form__button {
+  width: 224px;
+  height: 48px;
+  color: white;
+  background-color: #323232;
+  border: none;
+  border-radius: 4px;
+  margin-top: 16px;
+  margin-bottom: 32px;
+}
+.conversation-form__button:hover {
+  background-color: black;
+}
+@media (min-width: 768px) {
+  .conversation-form__button {
+    margin-top: 24px;
+    width: 160px;
+    align-self: flex-end;
+  }
+}
+
+.conversation-container-posted {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+}
+@media (min-width: 768px) {
+  .conversation-container-posted {
+    width: auto;
+  }
+}
+
+.comment-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 24px;
+}
+.comment-container__picture {
+  display: flex;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 16px;
+  margin-top: 40px;
+}
+@media (min-width: 1440px) {
+  .comment-container__picture {
+    margin-top: 58px;
+  }
+}
+.comment-container__picture--img {
+  width: 100%;
+  height: auto;
+}
+.comment-container__divider {
+  display: none;
+}
+@media (min-width: 768px) {
+  .comment-container__divider {
+    border-collapse: collapse;
+    display: block;
+    border-top: 1px solid #e1e1e1;
+  }
+}
+
+.comment-body {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 224px;
+}
+@media (min-width: 768px) {
+  .comment-body {
+    width: 460px;
+    justify-content: flex-start;
+  }
+}
+.comment-body__name {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  margin-bottom: 16px;
+  font-weight: 600;
+}
+@media (min-width: 768px) {
+  .comment-body__name {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+}
+@media (min-width: 768px) {
+  .comment-body__name {
+    margin-right: 16px;
+  }
+}
+.comment-body__date {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  color: #afafaf;
+}
+@media (min-width: 768px) {
+  .comment-body__date {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+.comment-body__comment {
+  width: 224px;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  flex: 100%;
+  margin-bottom: 24px;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+}
+@media (min-width: 768px) {
+  .comment-body__comment {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+}
+@media (min-width: 768px) {
+  .comment-body__comment {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+
 .footer-container {
   margin-top: 1rem;
   background-color: #323232;
