--- a/sprint-two/styles/main.scss
+++ b/sprint-two/styles/main.scss
@@ -241,21 +241,154 @@ a {
 }
 // CONVERSATION ***************************************************************************************
 
+// FORM****************************
 .conversation-container {
+  @include side-margin;
   @include flex-column;
   &__title {
+    margin-top: 32px;
+    @include h1-header;
+    @include desktop {
+      margin-top: 48px;
+    }
   }
-
-  .conversation-form {
+}
+.conversation-form {
+  @include flex-row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: auto;
+  @include desktop {
+  }
+  &__divider--top {
+    display: none;
+    @include tablet {
+      display: block;
+      width: 524px;
+      margin: 0 auto 0 auto;
+      border-top: 1px solid $divider;
+    }
+  }
+  &__picture {
+    @include Profile-picture;
+  }
+  &__form-container {
     @include flex-column;
-    &--name-input {
-    }
-    &--textarea-input {
-    }
-    &--button {
+    width: 224px;
+    @include tablet {
+      width: 460px;
     }
   }
-  &__conversation__Static {
+  &__name-label {
+    @include h5-labels;
+    color: $text-label;
+    font-weight: 600;
+    margin-top: 40px;
+    margin-bottom: 8px;
+    @include desktop {
+      margin-top: 58px;
+    }
+  }
+  &__name {
+    height: 48px;
+    background-color: $text-field-background;
+    border: 1px solid black;
+    border-radius: 5px;
+    &::placeholder {
+      @include h5-labels;
+      padding-left: 15px;
+    }
+  }
+  &__label-textarea {
+    @include h5-labels;
+    color: $text-label;
+    font-weight: 600;
+    margin-top: 16px;
+    margin-bottom: 8px;
+    @include desktop {
+      margin-top: 24px;
+    }
+  }
+  &__textarea {
+    height: 96px;
+    background-color: $text-field-background;
+    border-radius: 5px;
+    &::placeholder {
+      @include h5-labels;
+      padding-top: 15px;
+      padding-left: 15px;
+    }
+  }
+  &__button {
+    width: 224px;
+    height: 48px;
+    color: white;
+    background-color: $band-primary-cta;
+    border: none;
+    border-radius: 4px;
+    margin-top: 16px;
+    margin-bottom: 32px;
+    &:hover {
+      background-color: black;
+    }
+    @include tablet {
+      margin-top: 24px;
+      width: 160px;
+      align-self: flex-end;
+    }
+  }
+}
+.conversation-container-posted {
+  @include flex-column;
+  align-items: center;
+  margin-bottom: 40px;
+  @include tablet {
+    width: auto;
+  }
+}
+.comment-container {
+  @include flex-row;
+  flex-wrap: wrap;
+  margin-top: 24px;
+  &__picture {
+    @include Profile-picture;
+  }
+  &__divider {
+    display: none;
+    @include tablet {
+      border-collapse: collapse;
+      display: block;
+      border-top: 1px solid $divider;
+    }
+  }
+}
+.comment-body {
+  @include flex-row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 224px;
+  @include tablet {
+    width: 460px;
+    justify-content: flex-start;
+  }
+  &__name {
+    @include h5-labels;
+    margin-bottom: 16px;
+    font-weight: 600;
+    @include tablet {
+      margin-right: 16px;
+    }
+  }
+  &__date {
+    @include h4-paragraph;
+    color: $text-label;
+  }
+  &__comment {
+    width: 224px;
+    @include h5-labels;
+    flex: 100%;
+    margin-bottom: 24px;
+    @include h4-paragraph;
   }
 }
 
