--- a/sprint-two/styles/main.css
+++ b/sprint-two/styles/main.css
@@ -67,7 +67,7 @@ a {
 }
 .navbar__items {
   width: 50%;
-  padding-bottom: 0.313rem;
+  padding-bottom: 0.4rem;
   margin: 1rem 0 0 0;
 }
 @media (min-width: 768px) {
@@ -104,7 +104,7 @@ a {
   }
 }
 .navbar__items--bar {
-  border-bottom: 0.313px solid white;
+  border-bottom: 0.313rem solid white;
 }
 .navbar__items a {
   display: inline-block;
@@ -614,12 +614,12 @@ a {
   }
 }
 .conversation-form__button {
-  width: 14rem;
-  height: 3rem;
   color: white;
   background-color: #323232;
   border: none;
   border-radius: 0.25rem;
+  width: 14rem;
+  height: 3rem;
   margin-top: 1rem;
   margin-bottom: 2rem;
 }
@@ -675,8 +675,9 @@ a {
 }
 @media (min-width: 768px) {
   .comment-container__divider {
-    border-collapse: collapse;
     display: block;
+    width: 32.75rem;
+    margin: 0 auto 0 auto;
     border-top: 1px solid #e1e1e1;
   }
 }
