--- a/sprint-two/styles/main.scss
+++ b/sprint-two/styles/main.scss
@@ -32,7 +32,7 @@ a {
 
   &__items {
     width: 50%;
-    padding-bottom: 0.313rem;
+    padding-bottom: 0.4rem;
     margin: 1rem 0 0 0;
     @include tablet {
       width: auto;
@@ -52,7 +52,7 @@ a {
       }
     }
     &--bar {
-      border-bottom: 0.313px solid white;
+      border-bottom: 0.313rem solid white;
     }
     a {
       display: inline-block;
@@ -320,12 +320,9 @@ a {
     }
   }
   &__button {
+    @include button;
     width: 14rem;
     height: 3rem;
-    color: white;
-    background-color: $band-primary-cta;
-    border: none;
-    border-radius: 0.25rem;
     margin-top: 1rem;
     margin-bottom: 2rem;
     &:hover {
@@ -356,8 +353,9 @@ a {
   &__divider {
     display: none;
     @include tablet {
-      border-collapse: collapse;
       display: block;
+      width: 32.75rem;
+      margin: 0 auto 0 auto;
       border-top: 1px solid $divider;
     }
   }
