--- a/sprint-two/styles/shows.css
+++ b/sprint-two/styles/shows.css
@@ -294,41 +294,25 @@ a {
   display: flex;
   flex-direction: column;
   align-items: left;
-  justify-content: space-around;
-  background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/hero.jpg);
+  background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/showshero.jpeg);
   background-size: cover;
   width: 100%;
-  min-height: 11.438rem;
-  height: 40vw;
-}
-@media (min-width: 768px) {
-  .hero {
-    min-height: 25rem;
-  }
-}
-@media (min-width: 1440px) {
-  .hero {
-    min-height: 41.875rem;
-  }
+  height: 472px;
 }
 .hero__subtittle {
-  margin: 0 1rem;
+  margin-top: 64px;
+  margin-left: 16px;
+  margin-left: 16px;
   color: white;
-}
-@media (min-width: 768px) {
-  .hero__subtittle {
-    margin: 0 1.5rem;
-  }
-}
-@media (min-width: 1440px) {
-  .hero__subtittle {
-    margin: 0 11.25rem;
-  }
 }
 .hero__title {
   font-size: 1.5rem;
   line-height: 2rem;
   margin: 0 1rem;
+  margin-top: 16px;
+  margin-left: 16px;
+  margin-left: 16px;
+  margin-bottom: 64px;
   color: white;
 }
 @media (min-width: 768px) {
@@ -349,7 +333,7 @@ a {
 }
 .hero__player-cont {
   margin: 0 1rem;
-  max-width: 288px;
+  width: 288px;
 }
 @media (min-width: 768px) {
   .hero__player-cont {
