--- a/sprint-two/styles/shows.scss
+++ b/sprint-two/styles/shows.scss
@@ -25,30 +25,36 @@ a {
 .hero {
   @include flex-column;
   align-items: left;
-  justify-content: space-around;
-  background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/hero.jpg);
+  background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/showshero.jpeg);
   background-size: cover;
   width: 100%;
-  min-height: 11.438rem;
-  height: 40vw;
+  // min-height: 11.438rem;
+  height: 472px;
   @include tablet {
-    min-height: 25rem;
+    // min-height: 25rem;
   }
   @include desktop {
-    min-height: 41.875rem;
+    // min-height: 41.875rem;
   }
   &__subtittle {
-    @include side-margin;
+    // @include side-margin;
+    margin-top: 64px;
+    margin-left: 16px;
+    margin-left: 16px;
     color: white;
   }
   &__title {
     @include h1-hero;
     @include side-margin;
+    margin-top: 16px;
+    margin-left: 16px;
+    margin-left: 16px;
+    margin-bottom: 64px;
     color: white;
   }
   &__player-cont {
     @include side-margin;
-    max-width: 288px;
+    width: 288px;
     & iframe {
       width: 100%;
       height: 95.45px;
