--- a/sprint-two/styles/shows.css
+++ b/sprint-two/styles/shows.css
@@ -296,11 +296,11 @@ a {
   background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/showshero.jpeg);
   background-size: cover;
   width: 100%;
-  height: 472px;
+  height: 29.5rem;
 }
 @media (min-width: 768px) {
   .hero {
-    height: 670px;
+    height: 41.875rem;
   }
 }
 @media (min-width: 1440px) {
@@ -311,23 +311,23 @@ a {
 }
 .hero__subtitle {
   color: white;
-  margin: 64px 0 0 16px;
+  margin: 4rem 0 0 1rem;
 }
 @media (min-width: 768px) {
   .hero__subtitle {
-    margin: 96px 0 0 24px;
+    margin: 6rem 0 0 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .hero__subtitle {
-    margin: 160px 0 0 180px;
+    margin: 10rem 0 0 11.25rem;
   }
 }
 .hero__title {
   font-size: 1.5rem;
   line-height: 2rem;
   color: white;
-  margin: 16px 0 64px 16px;
+  margin: 1rem 0 4rem 1rem;
 }
 @media (min-width: 768px) {
   .hero__title {
@@ -335,30 +335,25 @@ a {
     line-height: 4.25rem;
   }
 }
-@media (min-width: 768px) {
-  .hero__title {
-    margin: 16px 0 64px 16px;
-  }
-}
 @media (min-width: 1440px) {
   .hero__title {
-    margin: 48px 0 64px 180px;
+    margin: 3rem 0 4rem 11.25rem;
   }
 }
 .hero__player-cont {
-  margin: 0px 16px 0 16px;
+  margin: 0 1rem;
 }
 @media (min-width: 768px) {
   .hero__player-cont {
-    margin: 0 24px 0 24px;
+    margin: 0 1.5rem;
     width: 60%;
-    max-width: 400px;
+    max-width: 25rem;
   }
 }
 @media (min-width: 1440px) {
   .hero__player-cont {
-    width: 436px;
-    margin: 265px 0 0 64px;
+    width: 27.25rem;
+    margin: 16.563rem 0 0 4rem;
   }
 }
 .hero__player-cont--iframe {
