--- a/sprint-two/styles/shows.scss
+++ b/sprint-two/styles/shows.scss
@@ -27,51 +27,47 @@ a {
   background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/showshero.jpeg);
   background-size: cover;
   width: 100%;
-  height: 472px;
+  height: 29.5rem;
   @include tablet {
-    height: 670px;
+    height: 41.875rem;
   }
   @include desktop {
     @include flex-row;
   }
   &__subtitle {
     color: white;
-    margin: 64px 0 0 16px;
+    margin: 4rem 0 0 1rem;
     @include tablet {
-      margin: 96px 0 0 24px;
+      margin: 6rem 0 0 1.5rem;
     }
     @include desktop {
-      margin: 160px 0 0 180px;
+      margin: 10rem 0 0 11.25rem;
     }
   }
   &__title {
     @include h1-hero;
     color: white;
-    margin: 16px 0 64px 16px;
-    @include tablet {
-      margin: 16px 0 64px 16px;
-    }
+    margin: 1rem 0 4rem 1rem;
     @include desktop {
-      margin: 48px 0 64px 180px;
+      margin: 3rem 0 4rem 11.25rem;
     }
   }
   &__player-cont {
-    margin: 0px 16px 0 16px;
+    margin: 0 1rem;
     @include tablet {
-      margin: 0 24px 0 24px;
+      margin: 0 1.5rem;
       width: 60%;
-      max-width: 400px;
+      max-width: 25rem;
     }
     @include desktop {
-      width: 436px;
-      margin: 265px 0 0 64px;
+      width: 27.25rem;
+      margin: 16.563rem 0 0 4rem;
     }
     &--iframe {
       width: 100%;
     }
   }
 }
-
 // SHOW TABLE SECTION*******************
 .shows-container {
   margin: 2rem 1rem 0 1rem;
