--- a/sprint-two/styles/shows.css
+++ b/sprint-two/styles/shows.css
@@ -310,16 +310,28 @@ a {
   }
 }
 .hero__subtitle {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
   color: white;
   margin: 4rem 0 0 1rem;
 }
 @media (min-width: 768px) {
   .hero__subtitle {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .hero__subtitle {
+    font-size: 1.5rem;
+    line-height: 2rem;
     margin: 6rem 0 0 1.5rem;
   }
 }
 @media (min-width: 1440px) {
   .hero__subtitle {
+    font-size: 1.5rem;
+    line-height: 2rem;
     margin: 10rem 0 0 11.25rem;
   }
 }
